--- a/src/Services/RabbitWebConsumer/RabbitWebConsumer.csproj
+++ b/src/Services/RabbitWebConsumer/RabbitWebConsumer.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="DotNetCore.CAP.MongoDB" Version="3.0.3" />
     <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="3.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
   </ItemGroup>
 
 
