--- a/src/Services/RabbitWebProducer/RabbitWebProducer.csproj
+++ b/src/Services/RabbitWebProducer/RabbitWebProducer.csproj
@@ -1,15 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetCore.CAP" Version="3.0.3" />
-    <PackageReference Include="DotNetCore.CAP.MongoDB" Version="3.0.3" />
-    <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="3.0.3" />
+    <PackageReference Include="DotNetCore.CAP" Version="5.1.1" />
+    <PackageReference Include="DotNetCore.CAP.Dashboard" Version="5.1.1" />
+    <PackageReference Include="DotNetCore.CAP.MongoDB" Version="5.1.1" />
+    <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="5.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
   </ItemGroup>
